--- a/components/TransactionBar.module.css
+++ b/components/TransactionBar.module.css
@@ -1,8 +1,12 @@
 .bar {
   display: table;
   width: 100%;
-  height: 100%;
   cursor: pointer;
+  background: white;
+  height: 60px;
+  z-index: 2;
+  box-shadow: 0 -6px 16px -8px rgba(0, 0, 0, 0.08),
+    0 -9px 28px 0 rgba(0, 0, 0, 0.05), 0 -12px 48px 16px rgba(0, 0, 0, 0.03);
 }
 .bar:hover {
   background: #f8f9f9;
